# QMidi

./: .gitignore  .travis.yml  CMakeLists.txt  QMidi.pri  README.md  qmidiin.cpp  qmidiin.h  qmidimessage.cpp  qmidimessage.h  qmidiout.cpp  qmidiout.h  qmidipianoroll.cpp  qmidipianoroll.h
example/QMidiExample/: QMidiExample.pro  mainwindow.cpp  messagecomposer.cpp
examples/example/: mainwindow.cpp  mainwindow.h  messagecomposer.cpp
scripts/ci/common/: install.sh  script.sh
scripts/ci/linux/: install.sh
scripts/ci/osx/: install.sh
